// Daemon envelope messages for RemoteAgentShell
// Top-level message types for the WebRTC data channel

syntax = "proto3";

package ras;

option java_package = "com.ras.proto";
option java_multiple_files = true;

import "sessions.proto";
import "terminal.proto";
import "clipboard.proto";

// ============ Connection Ready ============

// Sent by phone after ConnectionManager is set up and ready to receive encrypted messages
// Daemon should wait for this before sending InitialState
message ConnectionReady {
    // Empty - just signals readiness
}

// ============ Ping/Pong for latency measurement ============

message Ping {
    int64 timestamp = 1;    // Unix timestamp milliseconds
}

message Pong {
    int64 timestamp = 1;    // Echo back the same timestamp
}

// ============ Heartbeat for connection keepalive ============
// Bidirectional - both sides send periodically to keep SCTP alive
// No response expected - receiving any heartbeat proves connection is alive

message Heartbeat {
    int64 timestamp = 1;    // Sender's timestamp (ms since epoch)
    uint64 sequence = 2;    // Monotonic sequence number for debugging
}

// ============ Graceful Disconnect ============
// Sent by phone when user explicitly disconnects
// Allows daemon to clean up immediately without waiting for heartbeat timeout

message Disconnect {
    string reason = 1;      // Optional reason for disconnect (e.g., "user_request", "app_closing")
}

// ============ Device Management ============

// Phone -> Daemon: Request to unpair this device
message UnpairRequest {
    string device_id = 1;  // Must match the authenticated device_id
}

// Daemon -> Phone: Acknowledge unpair completed
message UnpairAck {
    string device_id = 1;
}

// Daemon -> Phone: Notify that daemon has unpaired this device
message UnpairNotification {
    string device_id = 1;
    string reason = 2;  // e.g., "Removed via CLI"
}

// ============ Initial State ============

// Sent to phone immediately after connection established
message InitialState {
    repeated Session sessions = 1;
    repeated Agent agents = 2;
}

// ============ Error Response ============

message ErrorResponse {
    string error_code = 1;    // Machine-readable code
    string message = 2;       // Human-readable message
}

// ============ Envelope Messages ============

// Phone -> Daemon: All commands wrapped in RasCommand
message RasCommand {
    oneof command {
        SessionCommand session = 1;
        TerminalCommand terminal = 2;
        ras.clipboard.ClipboardMessage clipboard = 3;
        Ping ping = 4;
        ConnectionReady connection_ready = 5;
        Heartbeat heartbeat = 6;
        Disconnect disconnect = 7;
        UnpairRequest unpair_request = 8;
    }
}

// Daemon -> Phone: All events wrapped in RasEvent
message RasEvent {
    oneof event {
        SessionEvent session = 1;
        TerminalEvent terminal = 2;
        ras.clipboard.ClipboardMessage clipboard = 3;
        Pong pong = 4;
        InitialState initial_state = 5;
        ErrorResponse error = 6;
        Heartbeat heartbeat = 7;
        UnpairAck unpair_ack = 8;
        UnpairNotification unpair_notification = 9;
    }
}
